# mcr

./: .env.debug-capture  .env.local.docker  .env.local.host  .env.local.testing  .env.template  .gitignore  .gitlab-ci-dso.yml  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTIFICATION_TEST_PLAN.md  README.md  SECURITY.md  docker-compose.yaml  mcr.code-workspace  multipart-upload-error-handling.md  test.sh  test_notifications_e2e.py  vault-agent.hcl
benchmarks/visio_stt/: README.md  bot.py  config.example.json  config.json  config.py  preprocess.py  pyproject.toml  run.py
mcr-capture-worker/: .dockerignore  .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
mcr-capture-worker/mcr_capture_worker/: __init__.py  meeting_repository.py  worker.py
mcr-capture-worker/mcr_capture_worker/clients/: http_client.py  meeting_transition_client.py
mcr-capture-worker/mcr_capture_worker/db/: db.py
mcr-capture-worker/mcr_capture_worker/models/: meeting_model.py  user_model.py
mcr-capture-worker/mcr_capture_worker/schemas/: audio_capture_schema.py  meeting_schema.py
mcr-capture-worker/mcr_capture_worker/services/: meeting_audio_recorder.py  s3_service.py  webex_node_capture.py  webex_node_transport.py
mcr-capture-worker/mcr_capture_worker/settings/: settings.py
mcr-capture-worker/mcr_capture_worker/setup/: logger.py  sentry.py
mcr-capture-worker/mcr_capture_worker/utils/: s3_client.py  s3_service.py  upload_queue.py
mcr-capture-worker/tests/: conftest.py  test_handle_audio_chunks.py  test_settings.py
mcr-core/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SQL_QUERY_GENERATOR_PROMPT.md  alembic.ini  pyproject.toml
mcr-core/dantotsus/: dant-001-logger-importe-sentry.md
mcr-core/docs/: audio_processing_pipeline.md
mcr-core/mcr_meeting/: __init__.py  main.py  transcription_worker.py  worker_utils.py
mcr-core/mcr_meeting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcr-core/mcr_meeting/eval_naming/: __main__.py
mcr-core/mcr_meeting/evaluation/: asr_evaluation_pipeline.py  eval_types.py  utils.py
mcr-core/mcr_meeting/setup/: logger.py  request_id_middleware.py
mcr-core/notebooks/: .gitignore  explore_summre.py
mcr-core/scripts/: download_chunk.sh  download_meeting.sh  drive_keycloak_apply.py  drive_keycloak_validate.py  generate_state_machine_graph.py  process_audio.sh  provisioning.py  upload_file_S3.sh
mcr-core/scripts/dataset_standardisation/: clean_dataset_standardisation.py  merge_individual_audios.py  noisy_dataset_standardisation.py  utils.py
mcr-core/tests/: conftest.py  test_transcription_split_pipeline.py  test_transcription_worker.py
mcr-core/tests/api/: conftest.py  test_capture_bot_router.py  test_capture_router.py  test_deliverable_router.py  test_evaluation_router.py  test_feature_flag_router.py  test_feedback_router.py  test_lookup_router.py  test_meeting_multipart_router.py  test_meeting_router.py  test_report_generation_router.py  test_requeue_router.py  test_transcription_router.py  test_user_router.py
mcr-core/tests/client/: test_meeting_client.py
mcr-core/tests/config/: test_env_vars.py
mcr-core/tests/db/: test_deliverable_repository.py  test_meeting_repository.py
mcr-core/tests/domain/: test_authorize_meeting_access.py  test_custom_report_generation.py  test_deliverable_transitions.py  test_detailed_synthesis_generation.py  test_evaluation_zip.py  test_feedback.py  test_meeting_transitions.py  test_participant_reconciliation.py  test_report_rendering.py  test_structured_minutes_template.py  test_text_chunking.py  test_transcription_queue_estimation.py
mcr-core/tests/exceptions/: test_celery_exception_handler.py
mcr-core/tests/factories/: README.md  __init__.py  base.py  deliverable_factory.py  meeting_factory.py  meeting_transition_record_factory.py  test_factories.py  transcription_factory.py  user_factory.py
mcr-core/tests/infrastructure/: test_full_transcript.py  test_s3.py  test_s3_extension_extraction.py  test_s3_multipart.py  test_speech_to_text_models.py
mcr-core/tests/integration/: conftest.py  test_deliverable_storage.py
mcr-core/tests/mocks/: email_mocks.py  in_memory_drive.py  in_memory_email.py  in_memory_keycloak.py  in_memory_redis.py  in_memory_s3.py  report_task_mocks.py  s3_mocks.py
mcr-core/tests/orchestrators/: test_deliverable_orchestrator.py  test_deliverable_repository.py  test_meeting_repository.py  test_transcription_orchestrator.py
mcr-core/tests/schemas/: test_meeting_schema.py
mcr-core/tests/services/: conftest.py  test_custom_report_generation.py  test_deliverable_service.py  test_detailed_synthesis_generation.py  test_meeting_audio_service.py  test_meeting_service.py  test_meeting_transition_record_service.py  test_meeting_transitions_service.py  test_report_task_service.py  test_s3_multipart.py  test_transcription_waiting_time_service.py
mcr-core/tests/unit/: test_acronym_corrector.py  test_audio_chunk_download.py  test_audio_normalization.py  test_compute_transcription_chunks.py  test_deliverable_filename.py  test_extract_transcription_task_args.py  test_fetch_audio_bytes.py  test_match_speakers_with_participants.py  test_meeting_to_transcription_service.py  test_noise_detection.py  test_participant_extraction.py  test_remove_hallucinations.py  test_report_response_union.py  test_s3_audio.py  test_s3_extension_extraction.py  test_silent_audio_detection.py  test_speech_to_text_pipeline_api_mode.py  test_spelling_corrector.py  test_transcription_confidentiality.py  test_transcription_repository.py
mcr-core/tests/use_cases/: test_abort_multipart_upload.py  (+36 more)
mcr-gateway/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
mcr-gateway/mcr_gateway/: main.py
mcr-gateway/requirements/: base.txt  dev.txt  doc.txt
mcr-generation/: .gitignore  Dockerfile  Makefile  README.md  TODO_mcr-generation.md  mkdocs.yml  pyproject.toml
mcr-generation/certificate/: cert-config.sh  cert-ollama.pem
mcr-generation/mcr_generation/: __init__.py  main.py
mcr-generation/tests/: conftest.py
(+901 files in other folders)
