[project]
name = "mcr-meeting"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "pydantic-settings==2.11.0",
    "loguru>=0.7.3",
    "sqlalchemy[postgresql-psycopg2binary]==2.0.32",
    "pydantic[email]==2.12.0",
    "boto3>=1.35.0",
    "celery[redis]==5.5.3",
    "numpy>=2.2.6",
    "soundfile>=0.12.1",
    "mypy_boto3_s3>=1.40.26",
    "python-statemachine>=2.5.0",
    "unleashclient>=6.3.0",
    "jinja2>=3.1.6",
    "redis>=5.0.0",
    "python-keycloak==5.8.1",
    "tenacity>=9.1.4",
    "botocore>=1.40.59",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
api = [
    "docxtpl>=0.20.2",
    "python-docx==1.1.2",
    "fastapi[standard]==0.116.1",
    "starlette",
    "uvicorn==0.30.6",
    "sentry-sdk[fastapi]>=2.34.1",
    "alembic==1.16.4",
    "dotenv==0.9.9",
    "markdowntodocx>=0.1.9.2",
]
worker = [
    "pandas>=2.3.1",
    "jiwer>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "openai-whisper==20250625",
    "transformers==4.52.4",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "pytorch-lightning==2.5.5",
    "lightning==2.5.5",
    "onnxruntime==1.21.0",
    "llvmlite>=0.44.0",
    "numba>=0.61.0",
    "pyannote-audio",
    "pyannote-metrics",
    "httpx>=0.28.1",
    "sentry-sdk[celery]>=2.34.1",
    "faster-whisper>=1.2.0",
    "openai==1.92.2",
    "instructor==1.9.0",
    "langchain-text-splitters == 0.3.9",
    "num2words>=0.5.13",
    "langfuse>=3.10.5,<4",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-dotenv",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pydub>=0.25.1",
    "factory-boy>=3.3.3",
]
dev = [
    "ruff",
    "debugpy",
    "pytest-cov",
    "watchdog[watchmedo]>=6.0.0",
    "boto3-stubs[s3]>=1.40.36",
    "pydot>=4.0.1",
    "datasets>=4.5.0",
    "librosa>=0.11.0",
    "ipykernel>=7.1.0",
]
typing = [
    "celery-types==0.23.0",
    "mypy",
    "pandas-stubs>=2.3.0.250703",
    "numpy-typing>=1.1.1",
]
tools = ["mypy-clean-slate", "deptry", "import-linter"]

[tool.mypy]
# disallow_any_unimported = true
# disallow_any_expr = true
# disallow_any_decorated = true
disallow_any_explicit = true
# disallow_any_generics = true
# disallow_subclassing_any = true
strict = true
plugins = ["pydantic.mypy"]
disable_error_code = "unused-ignore"
exclude = [
    "^mcr_meeting/app/db/migrations(/.*)?$",
    "^notebooks(/.*)?$",
] # MyPy uses regex for exclusion rather than glob patterns

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
# This ignore type check on untyped imported modules.
module = [
    "whisper_timestamped",
    "jiwer",
    "ffmpeg",
    "num2words",
    "pyannote.*",
    "faster_whisper",
    "soundfile",
    "docxtpl.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
# T20:  flake8-print -> No print statements
# I:    isort -> Sorted imports
# G:    flake8-logging-format -> logging format
# UP:   pyupgrade -> PEP approved code conventions
# TID252: flake8-tidy-imports -> No relative imports
extend-select = ["T20", "I", "G", "UP", "TID251", "TID252"]
logger-objects = ["loguru.logger"]

ignore = ["UP017", "UP008", "UP028", "UP046"]

exclude = ["scripts/**", "notebooks/**"]

[tool.ruff.lint.per-file-ignores]
"**/setup/logger.py" = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use loguru instead of stdlib logging"
"requests".msg = "Use httpx instead of requests"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = ["../.env.local.docker", "../.env", "../.env.local.testing"]
markers = [
    "integration: exercises a live external dependency; skips when unreachable",
]

[tool.deptry]
extend_exclude = ["scripts/**", "notebooks/**"]

[tool.deptry.package_module_name_map]
"ffmpeg-python" = ["ffmpeg"]

[tool.deptry.per_rule_ignores]
# These dependencies are used by whisper_timestamped but are never imported in the code
DEP002 = [
    "openai-whisper",
    "transformers",
    "torchaudio",
    "pytorch-lightning",
    "lightning",
    "onnxruntime",
    "llvmlite",
    "numba",
]

# -----------------------------------------------------------------------------
# import-linter — enforce the target architecture from CLAUDE.md.
#
#   1. `layers` (closed-by-default) encodes the vertical call chain: nothing below
#      use_cases may import api or use_cases.
#   2. `domain` is I/O-less — it may not (directly) import db/infrastructure or any
#      legacy layer. (Kept as a `forbidden` contract rather than `|`-independent layers
#      because the ORM models import `db.db`, so every layer reaches db *indirectly*
#      and layers contracts have no direct-only mode.)
#   3. use-cases must not import each other (share via use_cases._shared).
#   4. use-cases must not reach into the legacy layers.
#
# `ignore_imports` lists the KNOWN legacy edges still to migrate — the debt ledger.
# It only shrinks: unmatched ignores raise an error, so removing an edge forces
# removing its entry. `models` / `schemas` / `exceptions` are the shared kernel and
# are left out of the layering.
# -----------------------------------------------------------------------------
[tool.importlinter]
root_package = "mcr_meeting"

[[tool.importlinter.contracts]]
name = "Call chain: api > use_cases > {domain, db, infrastructure}"
type = "layers"
layers = [
    "mcr_meeting.app.api",
    "mcr_meeting.app.use_cases",
    "mcr_meeting.app.domain : mcr_meeting.app.db : mcr_meeting.app.infrastructure",
]

[[tool.importlinter.contracts]]
name = "domain is I/O-less (no db/infrastructure/legacy)"
type = "forbidden"
allow_indirect_imports = true
source_modules = ["mcr_meeting.app.domain"]
forbidden_modules = [
    "mcr_meeting.app.db",
    "mcr_meeting.app.infrastructure",
    "mcr_meeting.app.services",
    "mcr_meeting.app.client",
]
ignore_imports = [
    # TODO(arch): render_report should not reach into the legacy docx service
    "mcr_meeting.app.domain.report_rendering -> mcr_meeting.app.services.docx_report_generation_service",
]

[[tool.importlinter.contracts]]
name = "Use-cases must not import each other"
type = "independence"
modules = ["mcr_meeting.app.use_cases.*"]
# Shared business operations live in use_cases._shared and may be imported by
# any use-case (see CLAUDE.md). Independence still holds between use-cases.
ignore_imports = [
    "mcr_meeting.app.use_cases.* -> mcr_meeting.app.use_cases._shared.**",
]

[[tool.importlinter.contracts]]
name = "Use-cases must not depend on legacy services/client"
type = "forbidden"
allow_indirect_imports = true
source_modules = ["mcr_meeting.app.use_cases"]
forbidden_modules = [
    "mcr_meeting.app.services",
    "mcr_meeting.app.client",
]
