[project]
name = "mcr-generation"
version = "0.0.1"
requires-python = "~=3.13.0"


dependencies = [
    "uvicorn == 0.40.0",
    "langchain == 0.3.27",
    "openai == 1.92.2",
    "python-multipart == 0.0.22",
    "pydantic == 2.12.5",
    "pydantic-settings == 2.13.0",
    "langchain-community == 0.4.1",
    "instructor==1.14.5",
    "loguru>=0.7.3",
    "unstructured==0.20.2",
    "celery[redis]==5.6.2",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
    "python-docx>=1.2.0",
    "sentry-sdk[celery]>=2.34.1",
    "langfuse>=3.10.5",
]

[project.optional-dependencies]
test = ["pytest", "pytest-dotenv", "pytest-cov", "pytest-mock"]
dev = ["ruff", "mypy", "debugpy", "boto3-stubs[s3]>=1.35.0"]
typing = ["mypy-clean-slate", "celery-types==0.24.0"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
exclude = ["**/*.ipynb"]

[tool.ruff.lint]
# T20:  flake8-print -> No print statements
# I:    isort -> Sorted imports
# G:    flake8-logging-format -> logging format
extend-select = ["T20", "I", "G"]
logger-objects = ["loguru.logger"]
