[project]
name = "visio-stt-benchmark"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.55",
    "pydantic>=2.11",
    "loguru>=0.7",
]

[dependency-groups]
dev = ["ruff", "mypy"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
extend-select = ["T20", "I", "G", "UP", "TID251"]
logger-objects = ["loguru.logger"]
ignore = ["UP017", "UP008", "UP028", "UP046", "UP047"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use loguru instead of stdlib logging"
"requests".msg = "Use httpx instead of requests"
